# study_cv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  blur.cpp  edge.cpp  filter.cpp  imread.cpp
cmake/: deps.cmake
scripts/: format_cmake.sh  install_opencv.sh
src/: CMakeLists.txt
src/cv/: filter.cpp  filter.h
tests/: CMakeLists.txt  test_filter.cpp
