find_package(Threads REQUIRED)
add_library(cv STATIC cv/filter.cpp)
target_include_directories(cv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
target_link_libraries(cv PRIVATE Threads::Threads ${OpenCV_LIBS})
target_compile_features(cv PUBLIC cxx_std_20)
target_compile_options(cv PUBLIC -Wall -Wextra)
